Added html elements and some basic styling

--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <label for="Email">E-mail:</label>
+    <input type="email" name="Email" id="Email" />
+    <label for="country">Country:</label>
+    <select name="country" id="country">
+      <option value="Serbia">Serbia</option>
+      <option value="Macedonia">Macedonia</option>
+      <option value="Russia">Russia</option>
+      <option value="France">France</option>
+    </select>
+    <label for="pass">Password:</label>
+    <input type="password" name="pass" id="pass" />
+    <label for="confirmpass">Confirm password:</label>
+    <input type="password" name="confirmpass" id="confirmpass" />
+    <button type="submit">Submit</button>
+
     <script src="index.js"></script>
   </body>
 </html>
