Added ZIP code input

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       <option value="Russia">Russia</option>
       <option value="France">France</option>
     </select>
+    <label for="zip">ZIP:</label>
+    <input type="text" name="zip" id="zip" />
     <label for="pass">Password:</label>
     <input type="password" name="pass" id="pass" />
     <label for="confirmpass">Confirm password:</label>
